feat: 完成商品、用户、订单核心业务模块开发
- 商品服务(Product): SPU 分类/品牌信息批量填充、Feign 接口扩展、
  分类树 CRUD、品牌管理 CRUD，34 个单元测试
- 用户服务(User): Redis Cache-Aside 缓存、地址归属权校验、
  Bean Validation 参数校验、分页查询，21 个单元测试
- 订单服务(Order): 完整状态机(PENDING_PAY→PAID→SHIPPED→COMPLETED/CANCELLED)、
  RocketMQ 延迟取消、Redis 原子订单号生成、Feign 请求头中继、
  管理端接口分离，37 个单元测试
- 公共模块: ResultCode 扩展(地址/订单/库存错误码)、
  BusinessException/Result/JsonUtils 单元测试
- 库存服务: InventoryServiceImpl 单元测试覆盖