@@ -3,6 +3,7 @@ package com.ecommerce.order.service.impl;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.ecommerce.api.inventory.InventoryApi;
+import com.ecommerce.api.inventory.dto.InventoryDeductRequest;
 import com.ecommerce.api.inventory.dto.InventoryItem;
 import com.ecommerce.api.inventory.dto.InventoryLockRequest;
 import com.ecommerce.api.inventory.dto.InventoryUnlockRequest;
@@ -11,27 +12,42 @@ import com.ecommerce.api.product.dto.SkuDTO;
 import com.ecommerce.api.user.UserApi;
 import com.ecommerce.api.user.dto.UserAddressDTO;
 import com.ecommerce.common.core.exception.BusinessException;
+import com.ecommerce.common.core.page.PageResult;
 import com.ecommerce.common.core.result.Result;
-import com.ecommerce.order.dto.*;
+import com.ecommerce.common.core.result.ResultCode;
+import com.ecommerce.common.mq.message.OrderMessage;
+import com.ecommerce.common.redis.util.RedisUtils;
+import com.ecommerce.common.web.context.UserContextHolder;
+import com.ecommerce.order.dto.OrderCancelRequest;
+import com.ecommerce.order.dto.OrderConfirmResponse;
+import com.ecommerce.order.dto.OrderDTO;
+import com.ecommerce.order.dto.OrderItemDTO;
+import com.ecommerce.order.dto.OrderPageRequest;
+import com.ecommerce.order.dto.OrderShipRequest;
+import com.ecommerce.order.dto.OrderSubmitRequest;
 import com.ecommerce.order.entity.Order;
 import com.ecommerce.order.entity.OrderItem;
 import com.ecommerce.order.entity.OrderStatusLog;
+import com.ecommerce.order.enums.OrderStatus;
 import com.ecommerce.order.mapper.OrderItemMapper;
 import com.ecommerce.order.mapper.OrderMapper;
 import com.ecommerce.order.mapper.OrderStatusLogMapper;
+import com.ecommerce.order.mq.OrderMessageProducer;
 import com.ecommerce.order.service.OrderService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
 
 import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
+import java.util.concurrent.TimeUnit;
 
 @Slf4j
 @Service
@@ -44,19 +60,19 @@ public class OrderServiceImpl implements OrderService {
     private final ProductApi productApi;
     private final UserApi userApi;
     private final InventoryApi inventoryApi;
+    private final RedisUtils redisUtils;
+    private final OrderMessageProducer orderMessageProducer;
+
+    private static final String ORDER_NO_SEQ_KEY_PREFIX = "order:no:seq:";
 
     @Override
     public OrderConfirmResponse confirmOrder(OrderSubmitRequest request) {
         List<Long> skuIds = request.getItems().stream()
                 .map(OrderSubmitRequest.OrderItemRequest::getSkuId)
-                .collect(Collectors.toList());
+                .toList();
 
-        Result<List<SkuDTO>> skuResult = productApi.getSkuListByIds(skuIds);
-        if (skuResult.getCode() != 0 || skuResult.getData() == null) {
-            throw new BusinessException("Failed to get product info");
-        }
+        List<SkuDTO> skus = checkFeignResult(productApi.getSkuListByIds(skuIds), ResultCode.ORDER_PRODUCT_QUERY_FAILED);
 
-        List<SkuDTO> skus = skuResult.getData();
         List<OrderItemDTO> items = new ArrayList<>();
         BigDecimal totalAmount = BigDecimal.ZERO;
 
@@ -64,7 +80,8 @@ public class OrderServiceImpl implements OrderService {
             SkuDTO sku = skus.stream()
                     .filter(s -> s.getSkuId().equals(itemReq.getSkuId()))
                     .findFirst()
-                    .orElseThrow(() -> new BusinessException("SKU not found: " + itemReq.getSkuId()));
+                    .orElseThrow(() -> new BusinessException(ResultCode.PRODUCT_NOT_FOUND,
+                            "SKU not found: " + itemReq.getSkuId()));
 
             BigDecimal itemTotal = sku.getPrice().multiply(BigDecimal.valueOf(itemReq.getQuantity()));
             totalAmount = totalAmount.add(itemTotal);
@@ -88,24 +105,27 @@ public class OrderServiceImpl implements OrderService {
     @Override
     @Transactional(rollbackFor = Exception.class)
     public Long submitOrder(OrderSubmitRequest request) {
-        // 1. Get SKU info and calculate total
+        Long userId = UserContextHolder.getUserId();
+        if (userId == null) {
+            throw new BusinessException(ResultCode.UNAUTHORIZED);
+        }
+
         OrderConfirmResponse confirm = confirmOrder(request);
 
-        // 2. Get user address
-        Result<UserAddressDTO> addressResult = userApi.getAddressById(request.getAddressId());
-        if (addressResult.getCode() != 0 || addressResult.getData() == null) {
-            throw new BusinessException("Address not found");
+        UserAddressDTO address = checkFeignResult(userApi.getAddressById(request.getAddressId()),
+                ResultCode.ORDER_ADDRESS_QUERY_FAILED);
+        if (!userId.equals(address.getUserId())) {
+            throw new BusinessException(ResultCode.FORBIDDEN, "Address does not belong to current user");
         }
-        UserAddressDTO address = addressResult.getData();
-        String fullAddress = address.getProvince() + address.getCity() + address.getDistrict() + address.getDetailAddress();
+        String fullAddress = address.getProvince() + address.getCity()
+                + address.getDistrict() + address.getDetailAddress();
 
-        // 3. Create order
         String orderNo = generateOrderNo();
         Order order = Order.builder()
                 .orderNo(orderNo)
-                .userId(request.getUserId())
+                .userId(userId)
                 .totalAmount(confirm.getTotalAmount())
-                .status(0)
+                .status(OrderStatus.PENDING_PAY.getCode())
                 .receiverName(address.getReceiverName())
                 .receiverPhone(address.getReceiverPhone())
                 .receiverAddress(fullAddress)
@@ -113,7 +133,7 @@ public class OrderServiceImpl implements OrderService {
                 .build();
         orderMapper.insert(order);
 
-        // 4. Create order items
+        List<OrderItem> orderItems = new ArrayList<>();
         for (OrderItemDTO item : confirm.getItems()) {
             OrderItem orderItem = OrderItem.builder()
                     .orderId(order.getId())
@@ -125,34 +145,37 @@ public class OrderServiceImpl implements OrderService {
                     .image(item.getImage())
                     .build();
             orderItemMapper.insert(orderItem);
+            orderItems.add(orderItem);
         }
 
-        // 5. Log status
-        saveStatusLog(order.getId(), null, 0, "system", "order created");
+        saveStatusLog(order.getId(), null, OrderStatus.PENDING_PAY.getCode(), "user:" + userId, "order created");
 
-        // 6. Lock inventory
         List<InventoryItem> inventoryItems = request.getItems().stream()
                 .map(item -> InventoryItem.builder()
                         .skuId(item.getSkuId())
                         .quantity(item.getQuantity())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         InventoryLockRequest lockRequest = InventoryLockRequest.builder()
                 .orderId(order.getId())
                 .items(inventoryItems)
                 .build();
 
-        Result<Boolean> lockResult = inventoryApi.lockInventory(lockRequest);
-        if (lockResult.getCode() != 0 || !Boolean.TRUE.equals(lockResult.getData())) {
-            throw new BusinessException("Failed to lock inventory");
+        Boolean locked = checkFeignResult(inventoryApi.lockInventory(lockRequest), ResultCode.ORDER_INVENTORY_LOCK_FAILED);
+        if (!Boolean.TRUE.equals(locked)) {
+            throw new BusinessException(ResultCode.ORDER_INVENTORY_LOCK_FAILED);
         }
+
+        OrderMessage msg = orderMessageProducer.buildMessage(order, orderItems, null);
+        orderMessageProducer.sendOrderCreated(msg);
+        orderMessageProducer.sendDelayAutoCancel(msg);
 
         return order.getId();
     }
 
     @Override
-    public Page<OrderDTO> listOrders(OrderPageRequest request) {
+    public PageResult<OrderDTO> listOrders(OrderPageRequest request) {
         Page<Order> page = new Page<>(request.getPageNum(), request.getPageSize());
         LambdaQueryWrapper<Order> wrapper = new LambdaQueryWrapper<>();
         if (request.getUserId() != null) {
@@ -161,62 +184,58 @@ public class OrderServiceImpl implements OrderService {
         if (request.getStatus() != null) {
             wrapper.eq(Order::getStatus, request.getStatus());
         }
+        if (StringUtils.hasText(request.getOrderNo())) {
+            wrapper.eq(Order::getOrderNo, request.getOrderNo());
+        }
         wrapper.orderByDesc(Order::getCreateTime);
-        Page<Order> orderPage = orderMapper.selectPage(page, wrapper);
 
-        Page<OrderDTO> resultPage = new Page<>(orderPage.getCurrent(), orderPage.getSize(), orderPage.getTotal());
-        resultPage.setRecords(orderPage.getRecords().stream()
+        Page<Order> orderPage = orderMapper.selectPage(page, wrapper);
+        List<OrderDTO> dtoList = orderPage.getRecords().stream()
                 .map(this::toOrderDTO)
-                .collect(Collectors.toList()));
-        return resultPage;
+                .toList();
+        return PageResult.of(dtoList, orderPage.getTotal(), request.getPageNum(), request.getPageSize());
     }
 
     @Override
     public OrderDTO getOrderDetail(Long orderId) {
         Order order = orderMapper.selectById(orderId);
         if (order == null) {
-            throw new BusinessException("Order not found");
+            throw new BusinessException(ResultCode.ORDER_NOT_FOUND);
         }
-        OrderDTO dto = toOrderDTO(order);
+        checkOwnership(order);
+        return buildOrderDetail(order);
+    }
 
-        LambdaQueryWrapper<OrderItem> itemWrapper = new LambdaQueryWrapper<>();
-        itemWrapper.eq(OrderItem::getOrderId, orderId);
-        List<OrderItem> items = orderItemMapper.selectList(itemWrapper);
-        dto.setItems(items.stream().map(this::toOrderItemDTO).collect(Collectors.toList()));
-
-        return dto;
+    @Override
+    public OrderDTO getOrderDetailAdmin(Long orderId) {
+        Order order = orderMapper.selectById(orderId);
+        if (order == null) {
+            throw new BusinessException(ResultCode.ORDER_NOT_FOUND);
+        }
+        return buildOrderDetail(order);
     }
 
     @Override
     public Integer getOrderStatus(Long orderId) {
         Order order = orderMapper.selectById(orderId);
         if (order == null) {
-            throw new BusinessException("Order not found");
+            throw new BusinessException(ResultCode.ORDER_NOT_FOUND);
         }
         return order.getStatus();
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
-    public void cancelOrder(Long orderId) {
+    public void cancelOrder(Long orderId, String cancelReason) {
         Order order = orderMapper.selectById(orderId);
         if (order == null) {
-            throw new BusinessException("Order not found");
+            throw new BusinessException(ResultCode.ORDER_NOT_FOUND);
         }
-        if (order.getStatus() != 0) {
-            throw new BusinessException("Only pending payment orders can be cancelled");
-        }
+        checkOwnership(order);
+        requireStatus(order, OrderStatus.PENDING_PAY);
 
-        Integer oldStatus = order.getStatus();
-        order.setStatus(5);
-        orderMapper.updateById(order);
-        saveStatusLog(orderId, oldStatus, 5, "system", "order cancelled");
-
-        // Unlock inventory
-        InventoryUnlockRequest unlockRequest = InventoryUnlockRequest.builder()
-                .orderId(orderId)
-                .build();
-        inventoryApi.unlockInventory(unlockRequest);
+        Long userId = UserContextHolder.getUserId();
+        doCancel(order, cancelReason != null ? cancelReason : "user cancelled", "user:" + userId);
     }
 
     @Override
@@ -224,40 +243,157 @@ public class OrderServiceImpl implements OrderService {
     public void payOrder(Long orderId) {
         Order order = orderMapper.selectById(orderId);
         if (order == null) {
-            throw new BusinessException("Order not found");
+            throw new BusinessException(ResultCode.ORDER_NOT_FOUND);
         }
-        if (order.getStatus() != 0) {
-            throw new BusinessException("Only pending payment orders can be paid");
+        checkOwnership(order);
+        requireStatus(order, OrderStatus.PENDING_PAY);
+
+        InventoryDeductRequest deductRequest = InventoryDeductRequest.builder().orderId(orderId).build();
+        Boolean deducted = checkFeignResult(inventoryApi.deductInventory(deductRequest), ResultCode.ORDER_INVENTORY_DEDUCT_FAILED);
+        if (!Boolean.TRUE.equals(deducted)) {
+            throw new BusinessException(ResultCode.ORDER_INVENTORY_DEDUCT_FAILED);
         }
 
-        Integer oldStatus = order.getStatus();
-        order.setStatus(1);
+        order.setStatus(OrderStatus.PAID.getCode());
         orderMapper.updateById(order);
-        saveStatusLog(orderId, oldStatus, 1, "payment", "payment completed");
+        saveStatusLog(orderId, OrderStatus.PENDING_PAY.getCode(), OrderStatus.PAID.getCode(), "payment", "payment completed");
 
-        // Deduct inventory
-        com.ecommerce.api.inventory.dto.InventoryDeductRequest deductRequest =
-                com.ecommerce.api.inventory.dto.InventoryDeductRequest.builder()
-                        .orderId(orderId)
-                        .build();
-        inventoryApi.deductInventory(deductRequest);
+        order.setStatus(OrderStatus.PENDING_SHIP.getCode());
+        orderMapper.updateById(order);
+        saveStatusLog(orderId, OrderStatus.PAID.getCode(), OrderStatus.PENDING_SHIP.getCode(), "system", "awaiting shipment");
+
+        LambdaQueryWrapper<OrderItem> itemWrapper = new LambdaQueryWrapper<>();
+        itemWrapper.eq(OrderItem::getOrderId, orderId);
+        List<OrderItem> items = orderItemMapper.selectList(itemWrapper);
+        OrderMessage msg = orderMessageProducer.buildMessage(order, items, null);
+        orderMessageProducer.sendOrderPaySuccess(msg);
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void shipOrder(Long orderId, OrderShipRequest request) {
+        Order order = orderMapper.selectById(orderId);
+        if (order == null) {
+            throw new BusinessException(ResultCode.ORDER_NOT_FOUND);
+        }
+        if (!OrderStatus.from(order.getStatus()).canTransitionTo(OrderStatus.SHIPPED)) {
+            throw new BusinessException(ResultCode.ORDER_STATUS_ERROR,
+                    "Current status: " + order.getStatus());
+        }
+
+        Long userId = UserContextHolder.getUserId();
+        order.setStatus(OrderStatus.SHIPPED.getCode());
+        orderMapper.updateById(order);
+        saveStatusLog(orderId, OrderStatus.PENDING_SHIP.getCode(), OrderStatus.SHIPPED.getCode(),
+                "admin:" + userId, request.getLogisticsCompany() + " " + request.getTrackingNo());
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void receiveOrder(Long orderId) {
+        Order order = orderMapper.selectById(orderId);
+        if (order == null) {
+            throw new BusinessException(ResultCode.ORDER_NOT_FOUND);
+        }
+        checkOwnership(order);
+        requireStatus(order, OrderStatus.SHIPPED);
+
+        Long userId = UserContextHolder.getUserId();
+        order.setStatus(OrderStatus.COMPLETED.getCode());
+        orderMapper.updateById(order);
+        saveStatusLog(orderId, OrderStatus.SHIPPED.getCode(), OrderStatus.COMPLETED.getCode(),
+                "user:" + userId, "order received");
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void autoCancelOrder(Long orderId) {
+        Order order = orderMapper.selectById(orderId);
+        if (order == null || order.getStatus() != OrderStatus.PENDING_PAY.getCode()) {
+            log.info("Auto-cancel skipped, orderId={}, status={}", orderId,
+                    order != null ? order.getStatus() : "not found");
+            return;
+        }
+        doCancel(order, "Payment timeout auto-cancel", "system");
+    }
+
+    private void doCancel(Order order, String reason, String operator) {
+        order.setStatus(OrderStatus.CANCELLED.getCode());
+        orderMapper.updateById(order);
+        saveStatusLog(order.getId(), OrderStatus.PENDING_PAY.getCode(), OrderStatus.CANCELLED.getCode(),
+                operator, reason);
+
+        InventoryUnlockRequest unlockRequest = InventoryUnlockRequest.builder()
+                .orderId(order.getId()).build();
+        Boolean unlocked = checkFeignResult(inventoryApi.unlockInventory(unlockRequest),
+                ResultCode.ORDER_INVENTORY_UNLOCK_FAILED);
+        if (!Boolean.TRUE.equals(unlocked)) {
+            throw new BusinessException(ResultCode.ORDER_INVENTORY_UNLOCK_FAILED);
+        }
+
+        LambdaQueryWrapper<OrderItem> itemWrapper = new LambdaQueryWrapper<>();
+        itemWrapper.eq(OrderItem::getOrderId, order.getId());
+        List<OrderItem> items = orderItemMapper.selectList(itemWrapper);
+        OrderMessage msg = orderMessageProducer.buildMessage(order, items, reason);
+        orderMessageProducer.sendOrderCancelled(msg);
+    }
+
+    private void checkOwnership(Order order) {
+        Long currentUserId = UserContextHolder.getUserId();
+        if (currentUserId != null && !currentUserId.equals(order.getUserId())) {
+            throw new BusinessException(ResultCode.ORDER_ACCESS_DENIED);
+        }
+    }
+
+    private void requireStatus(Order order, OrderStatus expected) {
+        if (order.getStatus() != expected.getCode()) {
+            throw new BusinessException(ResultCode.ORDER_STATUS_ERROR,
+                    "Expected status " + expected.getCode() + ", current: " + order.getStatus());
+        }
+    }
+
+    private <T> T checkFeignResult(Result<T> result, ResultCode failCode) {
+        if (result == null || result.getCode() != ResultCode.SUCCESS.getCode() || result.getData() == null) {
+            log.error("Feign call failed, code={}", result != null ? result.getCode() : null);
+            throw new BusinessException(failCode);
+        }
+        return result.getData();
+    }
+
+    private OrderDTO buildOrderDetail(Order order) {
+        OrderDTO dto = toOrderDTO(order);
+        LambdaQueryWrapper<OrderItem> itemWrapper = new LambdaQueryWrapper<>();
+        itemWrapper.eq(OrderItem::getOrderId, order.getId());
+        List<OrderItem> items = orderItemMapper.selectList(itemWrapper);
+        dto.setItems(items.stream().map(this::toOrderItemDTO).toList());
+        return dto;
+    }
+
+    private String generateOrderNo() {
+        String datePrefix = LocalDate.now().format(DateTimeFormatter.BASIC_ISO_DATE);
+        String seqKey = ORDER_NO_SEQ_KEY_PREFIX + datePrefix;
+        Long seq = redisUtils.increment(seqKey, 1);
+        if (seq != null && seq == 1L) {
+            redisUtils.expire(seqKey, 2, TimeUnit.DAYS);
+        }
+        if (seq == null) {
+            log.warn("Redis unavailable for order no generation, using fallback");
+            String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMddHHmmss"));
+            int random = ThreadLocalRandom.current().nextInt(100000, 999999);
+            return timestamp + random;
+        }
+        return datePrefix + String.format("%010d", seq);
     }
 
     private void saveStatusLog(Long orderId, Integer fromStatus, Integer toStatus, String operator, String remark) {
-        OrderStatusLog log = OrderStatusLog.builder()
+        OrderStatusLog statusLog = OrderStatusLog.builder()
                 .orderId(orderId)
                 .fromStatus(fromStatus)
                 .toStatus(toStatus)
                 .operator(operator)
                 .remark(remark)
                 .build();
-        orderStatusLogMapper.insert(log);
-    }
-
-    private String generateOrderNo() {
-        String timestamp = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMddHHmmss"));
-        int random = ThreadLocalRandom.current().nextInt(100000, 999999);
-        return timestamp + random;
+        orderStatusLogMapper.insert(statusLog);
     }
 
     private OrderDTO toOrderDTO(Order order) {
